data/derived/comb/progs/unify/prog6601.ml.out
Characters 183-184:
  let args = List.combine (List.rev l1)::0 (List.rev l2)::0 in
                                         ^
Error: This expression has type int
       This is not a function; it cannot be applied.
